--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "mocha test"
+    "test": "mocha --timeout 50000 --exit test/"
   },
   "name": "back_end",
   "version": "1.0.0",
