--- a/.github/workflows/intergation.yml
+++ b/.github/workflows/intergation.yml
@@ -24,9 +24,9 @@ jobs:
   unit-tests:
     runs-on: ubuntu-latest
     env:
-      PORT: ${{secrets.PORT}}
-      SALT: ${{secrets.SALT}}
-      MONGODB_URL_TEST: ${{secrets.mydocs}}
+      PORT: ${{PORT}}
+      SALT: ${{SALT}}
+      MONGODB_URL_TEST: ${{mydocs}}
     strategy:
       matrix:
         node-version: [14.x, 16.x, 18.x]
