--- a/.github/workflows/intergation.yml
+++ b/.github/workflows/intergation.yml
@@ -1,85 +1,36 @@
-name: integration
-
+name: gitActions
 on:
-  push:
-    branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
-
+  push:
+    branches:
+      - ft-integration
+      - main
 jobs:
   build:
-
+    name: build
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout Code
+      uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm i
-    - run: npm run build 
- unit-test:
-
+    - name: Install Dependencies
+      run: npm install
+  test:
+    name: run-unit test
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [14.x, 16.x, 18.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout Code
+      uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
-    - run: npm ci
-    - run: npm i
-    - run: npm run test 
-    
-
-# name: gitActions
-# on:
-#   pull_request:
-#   push:
-#     branches:
-#       - ft-integration
-#       - main
-# jobs:
-#   build:
-#     name: build
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Checkout Code
-#       uses: actions/checkout@v3
-#     - name: Use Node.js ${{ matrix.node-version }}
-#       uses: actions/setup-node@v3
-#       with:
-#         node-version: ${{ matrix.node-version }}
-#     - name: Install Dependencies
-#       run: npm install
-#   test:
-#     name: run-unit test
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Checkout Code
-#       uses: actions/checkout@v3
-#     - name: Use Node.js ${{ matrix.node-version }}
-#       uses: actions/setup-node@v3
-#       with:
-#         node-version: ${{ matrix.node-version }}
-#     - name: Install Dependencies
-#       run: npm install
-#     - name: test
-#       run: npm run test
+    - name: Install Dependencies
+      run: npm install
+    - name: test
+      run: npm run test
 
        
