--- a/.github/workflows/intergation.yml
+++ b/.github/workflows/intergation.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
   push:
     branches:
-      - new-githubActions
+      - ft-integration
       - main
 jobs:
   build:
@@ -21,6 +21,12 @@ jobs:
   test:
     name: run-unit test
     runs-on: ubuntu-latest
+  env:
+      MONGODB_URL_TEST: ${{ secrets.MONGODB_URL_TEST }}
+      SECRET_KEY: ${{ secrets.SECRET_KEY }}
+      NODE_ENV: ${{ secrets.NODE_ENV}}
+      HOST: ${{ secrets.HOST }}
+      PORT: ${{ secrets.PORT }}
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
@@ -32,57 +38,4 @@ jobs:
       run: npm install
     - name: test
       run: npm run test
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-# name: gitActions
-# on:
-#   pull_request:
-#   push:
-#     branches:
-#       - ft-integration
-#       - main
-# jobs:
-#   build:
-#     name: build
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Checkout Code
-#       uses: actions/checkout@v3
-#     - name: Use Node.js ${{ matrix.node-version }}
-#       uses: actions/setup-node@v3
-#       with:
-#         node-version: ${{ matrix.node-version }}
-#     - name: Install Dependencies
-#       run: npm install
-#   test:
-#     name: run-unit test
-#     runs-on: ubuntu-latest
-#     steps:
-#     - name: Checkout Code
-#       uses: actions/checkout@v3
-#     - name: Use Node.js ${{ matrix.node-version }}
-#       uses: actions/setup-node@v3
-#       with:
-#         node-version: ${{ matrix.node-version }}
-#     - name: Install Dependencies
-#       run: npm install
-#     - name: test
-#       run: npm run test
-
        
